fix(destination-page): prevent alignment issues

--- a/src/styles/Destination.module.css
+++ b/src/styles/Destination.module.css
@@ -68,7 +68,7 @@
   }
 
   .destinationMeta {
-    --gap: 6rem;
+    --gap: min(6vw, 6rem);
     justify-content: start;
   }
 }
