--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -182,7 +182,7 @@ select {
   padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
 }
 
